intrumentaion in hello world

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<h1>Hello World!</h1>
 		<p>This is the first file in my new git repo.</p>
+		<p>A new line in our file!</p>
 	</body>
 </html>
 
