--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<h1>Hello World!</h1>
 		<p>This is the first file in my new git repo.</p>
 		<p>A new line in our file!</p>
+		<p>Adding new line from github</p>
 	</body>
 </html>
 
