--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<p>This is the first file in my new git repo.</p>
 		<p>A new line in our file!</p>
 		<p>Adding new line from github</p>
+		<h2>Lets make more changes to Hello World for push ops</h2>
+		<p>This is change line for push to github</p>
 	</body>
 </html>
 
